# GameplayQA

./: .env.example  .gitignore  LICENSE  README.md  ablation_benchmark.py  args.md  crop_question_video.py  download_data.py  evaluate_ablation.py  evaluate_results.py  extract_video_frames.py  llm_as_a_judge.py  main.py  plot_results.py  process_data.py  pyproject.toml  run_benchmark.py
gameplayqa/: __init__.py  ablation.py  benchmark.py  data.py  evaluate.py  judge.py  models.py  paths.py  progress.py  providers.py  questions.py  video.py
