[project]
name = "gameplayqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "google-genai>=2.6.0",
    "huggingface-hub>=1.16.1",
    "matplotlib>=3.10.9",
    "opencv-python>=4.12.0.88",
    "openai>=2.38.0",
    "openrouter>=0.9.1",
    "pillow>=12.0.0",
    "polars>=1.40.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=15.0.0",
]
